syntax = "proto3";

package proto;

import "code.proto";
import "pager.proto";

option java_generic_services = true;
option java_package = "net.coding.proto.platform.project";
option java_outer_classname = "ProjectTweetProto";

message ProjectTweet {
  int32 id = 1;
  int32 ownerId = 2;
  int32 projectId = 3;
  string content = 4;
  string raw = 5;
  int32 comments = 6;
}

message GetTweetByIdRequest {
  int32 id = 1;
}

message GetTweetResponse {
  int32 code = 1;
  string message = 2;
  ProjectTweet projectTweet = 3;
}

message FindTweetListRequest {
  int32 projectId = 1;
  proto.common.PageRequest pageRequest = 2;
}

message FindTweetListResponse {
  proto.common.Code code = 1;
  string message = 2;
  repeated ProjectTweet projectTweet = 3;
  proto.common.PageInfo pageInfo = 4;
}

message AddTweetRequest {
  int32 ownerId = 1;
  int32 projectId = 2;
  string content = 3;
  string raw = 4;
  int32 userId = 5;
}

message UpdateTweetRequest {
  int32 id = 1;
  int32 ownerId = 2;
  string content = 3;
  string raw = 4;
  int32 userId = 5;
}

message DeleteTweetRequest {
  int32 id = 1;
  int32 userId = 2;
}

message ProjectTweetResponse {
  proto.common.Code code = 1;
  string message = 2;
  ProjectTweet projectTweet = 3;
}

message CommonTweetResponse {
  proto.common.Code code = 1;
  string message = 2;
}

service ProjectTweetService {
  rpc GetById (GetTweetByIdRequest) returns (GetTweetResponse);
  rpc FindList (FindTweetListRequest) returns (FindTweetListResponse);
  rpc Add (AddTweetRequest) returns (ProjectTweetResponse);
  rpc Update (UpdateTweetRequest) returns (ProjectTweetResponse);
  rpc Delete (DeleteTweetRequest) returns (CommonTweetResponse);
}